--- a/spring-mybatis/src/main/resources/application.properties
+++ b/spring-mybatis/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # db
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test
+spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1qaz2wsx
